src/snapshots/bvr__tui__tests__snap_time_travel_narrow.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i In g Graph H Hist t Diff  | 3/3 | all
┌Diff Categories [fo┐┌Diff Detail──────────────────────────┐
│                   ││                                     │
│  No diff loaded.  ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
└───────────────────┘└─────────────────────────────────────┘
Time-travel: no diff loaded │ t enter ref │ Esc back
