src/snapshots/bvr__tui__tests__snap_tree_detail_focus.snap
---
source: src/tui.rs
expression: text
---
┃ ▾ 📋 P0 A Root 🟢                                         ┌──────────────────────────────────────┐
  └── • 📋 P0 B Dependent 🟢                                │ 📋 Root                              │
  • 📋 P0 C Closed ⚫                                       │                                      │
                                                            │ ┌───┬─────┬───────┬──────┬───────┐   │
                                                            │ │ … │ St… │ Prio… │ Ass… │ Crea… │   │
                                                            │ ├───┼─────┼───────┼──────┼───────┤   │
                                                            │ │ A │ OP… │ 🔥 P0 │ @al… │ 2026… │   │
                                                            │ └───┴─────┴───────┴──────┴───────┘   │
                                                            │                                      │
                                                            │ Labels: core, parity                 │
                                                            │ C copy id • L label filter • w repo  │
                                                            │ filter • t time-travel               │
                                                            │                                      │
                                                            │ 🎯 Triage Insights                   │
                                                            │ • 🔓 Unblocks: 1 downstream items    │
                                                            │ when completed                       │
                                                            │                                      │
                                                            │ Graph Analysis                       │
                                                            │ • Impact Depth: 2 (downstream chain  │
                                                            │ length)                              │
                                                            │ • Centrality: PR 0.4805 • BW 0.0000  │
                                                            │ • EV 1.0000                          │
                                                            │ • Flow Role: Hub 0.0000 • Authority  │
                                                            │ 1.0000                               │
                                                            │                                      │
                                                            │ Description                          │
                                                            │                                      │
                                                            │ Top-level issue that unblocks        │
                                                            └──────────────────────────────────────┘
 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1         3 issues  ^j/k scroll │ j/k nav │ h/l fold │ ⏎ toggle
