src/snapshots/bvr__tui__tests__snap_tree_narrow.snap
---
source: src/tui.rs
expression: text
---
Tree View

No issues to display.

To create hierarchy, add parent-child dependencies:
  br dep add <child> parent-child:<parent>

Press T to return to list view.





















 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1     3 issues  j/k nav
